--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: xyp 的小说
+title: Lingering Fragments
 subtitle: 一些想法和总结
 description:
 keywords:
